Modified en homepage

--- a/en/index.html
+++ b/en/index.html
@@ -82,13 +82,21 @@
             <h3 class="enw2" id="education">Education</h3>
             <div class="items">
                 <a class="item" href="https://www.ck.tp.edu.tw/" target="_blank">
-                    <img src="/pictures/profile_use/education/ck_seal.png" alt="Chien Kuo High School's seal">
+                    <picture>
+                        <source srcset="/pictures/profile_use/education/ck_seal.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/education/ck_seal.png" type="image/png">
+                        <img src="/pictures/profile_use/education/ck_seal.png" alt="Chien Kuo High School's seal">
+                    </picture>
                     <p class="title enw2">Taipei Municipal Chien Kuo High School</p>
                     <p class="description enw2">General Subjects Program</p>
                     <p class="time enw2">Sep 2021 ~ Jun 2024</p>
                 </a>
                 <a class="item" href="https://cs.utaipei.edu.tw/index.php?Lang=en" target="_blank">
-                    <img src="/pictures/profile_use/education/utaipei_seal.png" alt="University of Taipei's seal">
+                    <picture>
+                        <source srcset="/pictures/profile_use/education/utaipei_seal.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/education/utaipei_seal.png" type="image/png">
+                        <img src="/pictures/profile_use/education/utaipei_seal.png" alt="University of Taipei's seal">
+                    </picture>
                     <p class="title enw2">University of Taipei</p>
                     <p class="description enw2">Computer Science, BS</p>
                     <p class="time enw2">Sep 2024 ~ Present</p>
@@ -97,7 +105,11 @@
             <h3 class="enw2" id="experience">Work Experience</h3>
             <div class="items">
                 <a class="item" href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=en" target="_blank">
-                    <img src="/pictures/profile_use/experience/tonghsun.png" alt="Trademark of Tong Hsun Technology Co., Ltd.">
+                    <picture>
+                        <source srcset="/pictures/profile_use/experience/tonghsun.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/tonghsun.png" type="image/png">
+                        <img src="/pictures/profile_use/experience/tonghsun.png" alt="Trademark of Tong Hsun Technology Co., Ltd.">
+                    </picture>
                     <p class="title enw2">Tong Hsun Technology Co., Ltd. (English name TBD)</p>
                     <p class="description enw2">Teaching Assistant</p>
                     <p class="time enw2">Sep 2024 ~ Present</p>
@@ -106,19 +118,31 @@
             <h3 class="enw2" id="activities">Extracurricular Activities</h3>
             <div class="items">
                 <a class="item" href="https://35.infor.org" target="_blank">
-                    <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th's seal">
+                    <picture>
+                        <source srcset="/pictures/profile_use/experience/infor35th.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/infor35th.png" type="image/png">
+                        <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th's seal">
+                    </picture>
                     <p class="title enw2">INFOR 35th</p>
                     <p class="description enw2">Internal Affairs Officer</p>
                     <p class="time enw2">Feb 2023 ~ Jul 2023</p>
                 </a>
                 <a class="item" href="https://35.infor.org" target="_blank">
-                    <img src="/pictures/profile_use/experience/infor35th_web.png" alt="INFOR35th Web Course's visual identity">
+                    <picture>
+                        <source srcset="/pictures/profile_use/experience/infor35th_web.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/infor35th_web.png" type="image/png">
+                        <img src="/pictures/profile_use/experience/infor35th_web.png" alt="INFOR35th Web Course's visual identity">
+                    </picture>
                     <p class="title enw2">INFOR 35th Web Development Training Course</p>
                     <p class="description enw2">Co-Instructor</p>
                     <p class="time enw2">Mar 2023 ~ Jun 2023</p>
                 </a>
                 <a class="item" href="https://www.facebook.com/Utaipeisa2.0/" target="_blank">
-                    <img src="/pictures/profile_use/experience/utsa.jpg" alt="UTSA's seal">
+                    <picture>
+                        <source srcset="/pictures/profile_use/experience/utsa.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/utsa.jpg" type="image/jpg">
+                        <img src="/pictures/profile_use/experience/utsa.jpg" alt="UTSA's seal">
+                    </picture>
                     <p class="title enw2">University Of Taipei Student Association 11st</p>
                     <p class="description enw2">Information Officer</p>
                     <p class="time enw2">Sep 2024 ~ Present</p>
