Modified details of work experience

--- a/en/index.html
+++ b/en/index.html
@@ -111,7 +111,7 @@
                         <img src="/pictures/profile_use/experience/tonghsun.png" alt="Trademark of Tong Hsun Technology Co., Ltd.">
                     </picture>
                     <p class="title enw2">Tong Hsun Technology Co., Ltd. (English name TBD)</p>
-                    <p class="description enw2">Teaching Assistant</p>
+                    <p class="description enw2">Teaching Assistant (Part-time)</p>
                     <p class="time enw2">Sep 2024 ~ Present</p>
                 </a>
             </div>
