--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <img src="/pictures/profile_use/experience/tonghsun.png" alt="童訊科技股份有限公司商標" width="144" height="144">
                     </picture>
                     <p class="title zhw">童訊科技股份有限公司</p>
-                    <p class="description zhw">課程助教</p>
+                    <p class="description zhw">課程助教（兼職）</p>
                     <p class="time zhw">2024/09 ~ Present</p>
                 </a>
             </div>
