--- a/en/index.html
+++ b/en/index.html
@@ -289,7 +289,7 @@
     <div class="overlay"></div>
     <div class="popup">
         <div class="popup-content"></div>
-        <div class="close-btn">關閉</div>
+        <div class="close-btn">Close</div>
     </div>
     <script src="/scripts/window.js" type="text/javascript" defer></script>
 </body>
