--- a/en/index.html
+++ b/en/index.html
@@ -83,7 +83,7 @@
             <h2 class="enw2" id="intro">Allen Chang (Yu-Lun Chang)</h2>
             <hr>
             <p class="enw2">A college student living in the Republic of China, the country that is also known as Taiwan.</p>
-            <p class="enw2">I'm now focusing on full-stack devolopment, plugin and mobile application development, IoT, machine learning, and cybersecurity.</p>
+            <p class="enw2">I'm now striving to excel in full-stack development. Additionally, I have a keen interest in APP development, IoT, machine learning, and cybersecurity technologies.</p>
             <h3 class="enw2" id="education">Education</h3>
             <div class="items">
                 <a class="item" href="https://www.ck.tp.edu.tw/" target="_blank">
