--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2 class="zhw" id="intro">Allen Chang</h2>
             <hr>
             <p class="zhw">一名正在努力不爆肝的大學生。</p>
-            <p class="zhw">目前正在學習全端開發、外掛程式與手機應用開發、物聯網、機器學習及資安技術。</p>
+            <p class="zhw">目前正在朝全端開發努力，此外也對應用程式開發、物聯網、機器學習及資安技術等領域有興趣。</p>
             <p class="zhw">興趣有彈鋼琴、打羽球、聽音樂、看動漫、看輕小說、看 VTuber 直播，喜歡日本二次元文化，VTuber 主推 hololive 的大空スバル。</p>
             
             <h3 class="zhw" id="education">學歷</h3>
