--- a/sections/en/act_utsa11st.html
+++ b/sections/en/act_utsa11st.html
@@ -1,4 +1,14 @@
 <h2 class="enw2">University Of Taipei Student Association 11st</h2>
+<h3 class="zhw">Organization Overview</h3>
+<p class="zhw">
+    The University Of Taipei Student Association is established in accordance with 
+    <a href="https://law.moj.gov.tw/ENG/LawClass/LawParaDeatil.aspx?pcode=H0030001&bp=5" target="_blank">Article 33 of the University Act</a> 
+    and 
+    <a href="https://www.laws.taipei.gov.tw/Law/LawSearch/LawChapterArticle/FL078041?chapterno=5" target="_blank">Article 39 of the Taipei City University Organizational Guidelines</a>. 
+    Its purpose is to promote campus democracy, advocate for and safeguard student rights, enhance students' learning experiences, and foster students' self-governance capabilities.
+</p>
 <p class="enw2"><a href="https://www.facebook.com/Utaipeisa2.0/" target="_blank">Official FB page</a> (Note: The page is in Chinese)</p>
 <h3 class="enw2">Participation Record</h3>
-<p class="enw2">Information Officer: Sep 2024 ~ Present</p>
+<details class="enw2">
+    <summary>Information Officer (Sep 2024 ~ Present)</summary>
+</details>
