--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <p class="description zhw">普通科</p>
                     <p class="time zhw">2021/09 ~ 2024/06</p>
                 </a>
-                <a class="item" href="https://cs.utaipei.edu.tw/" target="_blank">
+                <a class="item" href="https://cs.utaipei.edu.tw/index.php?Lang=zh-tw" target="_blank">
                     <picture>
                         <source srcset="/pictures/profile_use/education/utaipei_seal.webp" type="image/webp">
                         <source srcset="/pictures/profile_use/education/utaipei_seal.png" type="image/png">
