--- a/en/index.html
+++ b/en/index.html
@@ -86,7 +86,7 @@
             <p class="enw2">I'm now striving to excel in full-stack development. Additionally, I have a keen interest in APP development, IoT, machine learning, and cybersecurity technologies.</p>
             <h3 class="enw2" id="education">Education</h3>
             <div class="items">
-                <a class="item" href="https://www.ck.tp.edu.tw/" target="_blank">
+                <a class="item" href="https://www.ck.tp.edu.tw/nss/s/LANGUAGE/index" target="_blank">
                     <picture>
                         <source srcset="/pictures/profile_use/education/ck_seal.webp" type="image/webp">
                         <source srcset="/pictures/profile_use/education/ck_seal.png" type="image/png">
