--- a/sections/en/act_infor35th.html
+++ b/sections/en/act_infor35th.html
@@ -1,6 +1,6 @@
 <h2 class="enw2">INFOR 35th</h2>
-<h3 class="zhw">Organization Overview</h3>
-<p class="zhw">
+<h3 class="enw2">Organization Overview</h3>
+<p class="enw2">
     The Chien Kuo Information Club (Abbreviation: INFOR) is a school club that was founded in 1988. It is one of the most historic and popular student clubs at Chien Kuo High School, bringing together talents in various fields of information technology and those with great interest or passion for this domain. Many national representatives in information competitions have been members of the club, such as Cheng-Hao Yang (2020 IOI Silver Medal), Ping-Hsuan Lin (2021 IOI Gold Medal), Jhao-Syun Lai (2022 IOI Silver Medal), and Ting-Wei Chang (2023 IOI Silver Medal).
     <br>
     We hope that every member can learn at their own pace, exploring fields they are interested in. We also strive to break barriers between senior and junior members to deepen camaraderie, fostering an environment where members can interact freely. Our vision is to be a cradle for future national representatives and experts in information technology, a support for those aiming to pursue degrees in computer science and electrical engineering, and a provider of the highest quality courses and dedication to serve our members and promote the field of information technology.
