--- a/sections/en/act_utsa11st.html
+++ b/sections/en/act_utsa11st.html
@@ -1,6 +1,6 @@
 <h2 class="enw2">University Of Taipei Student Association 11st</h2>
-<h3 class="zhw">Organization Overview</h3>
-<p class="zhw">
+<h3 class="enw2">Organization Overview</h3>
+<p class="enw2">
     The University Of Taipei Student Association is established in accordance with 
     <a href="https://law.moj.gov.tw/ENG/LawClass/LawParaDeatil.aspx?pcode=H0030001&bp=5" target="_blank">Article 33 of the University Act</a> 
     and 
