--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -76,7 +76,7 @@
                         <input type="email" class="text enw2" id="email" name="email" placeholder="Your E-mail Address" autocomplete="email" required>
                     </li>
                     <li>
-                        <label class="enw2 label" id="purpose_label">Purpose&ensp;<span class="required_mark">*</span></label>
+                        <span class="enw2 label" id="purpose_label">Purpose&ensp;<span class="required_mark">*</span></span>
                     </li>
                     <li>
                         <label class="enw2" for="purpose1">
