Update details for experience

--- a/sections/en/act_infor35th.html
+++ b/sections/en/act_infor35th.html
@@ -5,11 +5,12 @@
     <br>
     We hope that every member can learn at their own pace, exploring fields they are interested in. We also strive to break barriers between senior and junior members to deepen camaraderie, fostering an environment where members can interact freely. Our vision is to be a cradle for future national representatives and experts in information technology, a support for those aiming to pursue degrees in computer science and electrical engineering, and a provider of the highest quality courses and dedication to serve our members and promote the field of information technology.
 </p>
-<p class="enw2"><a href="https://35.infor.org" target="_blank">Club Website</a> (Note: The page is in Chinese)</p>
+<p class="enw2">
+    <a href="https://35.infor.org" target="_blank">Club Website</a>
+    (Note: The page is in Chinese)
+</p>
 <h3 class="enw2">Participation Record</h3>
-<details class="enw2">
-    <summary>Internal Affairs Officer (Feb 2023 ~ Jul 2023)</summary>
-</details>
-<details class="enw2">
-    <summary>Co-Instructor for Web Development Training Course (Mar 2023 ~ Jun 2023)</summary>
-</details>
+<ul class="enw2">
+    <li>Internal Affairs Officer (Feb 2023 ~ Jul 2023)</li>
+    <li>Co-Instructor for Web Development Training Course (Mar 2023 ~ Jun 2023)</li>
+</ul>
