--- a/sections/en/act_utsa11st.html
+++ b/sections/en/act_utsa11st.html
@@ -7,8 +7,11 @@
     <a href="https://www.laws.taipei.gov.tw/Law/LawSearch/LawChapterArticle/FL078041?chapterno=5" target="_blank">Article 39 of the Taipei City University Organizational Guidelines</a>. 
     Its purpose is to promote campus democracy, advocate for and safeguard student rights, enhance students' learning experiences, and foster students' self-governance capabilities.
 </p>
-<p class="enw2"><a href="https://www.facebook.com/Utaipeisa2.0/" target="_blank">Official FB page</a> (Note: The page is in Chinese)</p>
+<p class="enw2">
+    <a href="https://www.facebook.com/Utaipeisa2.0/" target="_blank">Official FB page</a>
+    (Note: The page is in Chinese)
+</p>
 <h3 class="enw2">Participation Record</h3>
-<details class="enw2">
-    <summary>Information Officer (Sep 2024 ~ Present)</summary>
-</details>
+<ul class="enw2">
+    <li>Information Officer (Sep 2024 ~ May 2025)</li>
+</ul>
