--- a/sections/en/exp_tonghsun.html
+++ b/sections/en/exp_tonghsun.html
@@ -1,7 +1,12 @@
 <h2 class="enw2">Tong Hsun Technology Co., Ltd. (English name TBD)</h2>
 <h3 class="enw2">Company Overview</h3>
-<p class="enw2"><a href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=en" target="_blank">Company Information - Ministry of Economic Affairs of Taiwan</a></p>
+<p class="enw2">
+    <a href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=en" target="_blank">
+        Company Information - Ministry of Economic Affairs of Taiwan
+    </a>
+</p>
 <h3 class="enw2">Work Experience Record</h3>
-<details class="enw2">
-    <summary>Teaching Assistant (Part-time) (Sep 2024 ~ Present)</summary>
-</details>
+<ul class="enw2">
+    <li>Part-time Teaching Assistant - Children's Block-Based Programming Course (Sep 2024 ~ Present)</li>
+    <li>Part-time Teacher - Children's Block-Based Programming Course (Mar 2025 ~ Present)</li>
+</ul>
