--- a/sections/tw/act_infor35th.html
+++ b/sections/tw/act_infor35th.html
@@ -7,9 +7,7 @@
 </p>
 <p class="zhw"><a href="https://35.infor.org/" target="_blank">社團網站</a></p>
 <h3 class="zhw">參與紀錄</h3>
-<details class="zhw">
-    <summary>內務 (2023/02 ~ 2023/07)</summary>
-</details>
-<details class="zhw">
-    <summary>網頁培訓班共同講師 (2023/03 ~ 2023/06)</summary>
-</details>
+<ul class="zhw">
+    <li>內務 (2023/02 ~ 2023/07)</li>
+    <li>網頁培訓班共同講師 (2023/03 ~ 2023/06)</li>
+</ul>
