--- a/sections/tw/act_utsa11st.html
+++ b/sections/tw/act_utsa11st.html
@@ -9,6 +9,6 @@
 </p>
 <p class="zhw"><a href="https://www.facebook.com/Utaipeisa2.0/" target="_blank">學生會FB</a></p>
 <h3 class="zhw">參與紀錄</h3>
-<details class="zhw">
-    <summary>資訊部部員 (2024/09 ~ Present)</summary>
-</details>
+<ul class="zhw">
+    <li>資訊部部員 (2024/09 ~ 2025/05)</li>
+</ul>
