--- a/sections/tw/exp_tonghsun.html
+++ b/sections/tw/exp_tonghsun.html
@@ -2,6 +2,7 @@
 <h3 class="zhw">公司簡介</h3>
 <p class="zhw"><a href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=zh_TW" target="_blank">公司資料-經濟部</a></p>
 <h3 class="zhw">任職紀錄</h3>
-<details class="zhw">
-    <summary>兼職課程助教 (2024/09 ~ Present)</summary>
-</details>
+<ul class="zhw">
+    <li>兼職課程助教 (2024/09 ~ Present)</li>
+    <li>兼職課程講師 (2025/03 ~ Present)</li>
+</ul>
