--- a/404.html
+++ b/404.html
@@ -28,13 +28,36 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874"
      crossorigin="anonymous"></script>
     <!-- other source -->
+    <style>
+        .pagehead {
+            height: 93vh;
+            background-image: url(/pictures/404_bg.webp);
+            margin: 0;
+            padding: 0;
+        }
+        .pagehead p {
+            text-align: center;
+            height: fit-content;
+        }
+        .pagetitle {
+            color: black;
+        }
+        .countingspan {
+            font-size: 25px;
+        }
+        @media screen and (max-width: 768px) {
+            .countingspan {
+                font-size: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <main class="pagehead" style="height: 93vh; background-image: url(/pictures/404_bg.webp); margin: 0; padding: 0;">
-        <p style="text-align: center; height: fit-content;">
-            <span class="pagetitle enw3" style="color: black">404 Not Found</span><br><br>
-            <span class="zhwb" style="font-size: 25px;"><span id="countdown"></span>秒後自動回到上一頁<br></span>
-            <span class="enw1" style="font-size: 25px;">Automatically go back to the previous page after <span id="countdownen"></span> seconds.</span>
+    <main class="pagehead">
+        <p>
+            <span class="pagetitle enw3">404 Not Found</span><br><br>
+            <span class="countingspan zhwb"><span id="countdown"></span>秒後自動回到上一頁<br></span>
+            <span class="countingspan enw1">Automatically go back to the previous page after <span id="countdownen"></span> seconds.</span>
         </p>
     </main>
     <footer>
