style: adjust navbar font

--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -42,9 +42,9 @@
         </a>
         <nav>
             <ul id="mobilenav">
-                <li><a class="navb zhwb" href="/en/">Home</a></li>
-                <li><a class="navb zhwb" href="/en/projects/">Projects</a></li>
-                <li><a class="navb zhwb" href="/en/contact/">Contact</a></li>
+                <li><a class="navb enw3" href="/en/">Home</a></li>
+                <li><a class="navb enw3" href="/en/projects/">Projects</a></li>
+                <li><a class="navb enw3" href="/en/contact/">Contact</a></li>
                 <li><a class="navb zhwb" href="/">中文</a></li>
                 <hr>
                 <p class="enw2" id="lastupdate">
