feat: add homepage title

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main>
         <div class="pagehead">
             <p class="pagetitle">
-                <span class="zhwb"></span>
+                <span class="enw3">BlueBoy247</span>
             </p>
         </div>
 
