feat: add projects

--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -69,9 +69,55 @@
                 <option value="all" selected>All</option>
                 <option value="personal">Personal</option>
                 <option value="infor35th">@ INFOR 35th</option>
+                <option value="utsa">@IT Division, University of Taipei Student Association</option>
+                <option value="utsys">@Computer and Network Center, University of Taipei</option>
             </select>
         </div>
         <div id="projectc">
+            <a href="https://carbon-diary.utaipei.edu.tw/" target="_blank" class="problock utsys">
+                <div class="proimage">
+                    <img src="/pictures/project_use/utsys-carbondiary.png" alt="UTaipei Carbon Diary System" title="UTaipei Carbon Diary System">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle enw2">UTaipei Carbon Diary System</p>
+                    <p class="protime enw2">Mar 2025 - Jul 2025</p>
+                    <div class="protag enw2">
+                        <span>FastAPI</span>
+                        <span>SQLAlchemy</span>
+                        <span>pytest</span>
+                    </div>
+                    <p class="probrief enw2">Students and staff who bring their own reusable tableware when dining at the student restaurant can scan the store's QR code through this system to earn points. Administrators can view and export records, and conduct prize draws via the admin panel. I joined the maintenance team half years after the system went live, and was mainly responsible for backend development and SRE. As there were no plans for further use due to school policy, maintenance of the system was discontinued in July 2025.</p>
+                </div>
+            </a>
+            <a href="https://portal.utaipei.edu.tw/" target="_blank" class="problock utsys">
+                <div class="proimage">
+                    <img src="/pictures/project_use/utsys-portal.png" alt="UTaipei Student Leave Application System" title="UTaipei Student Leave Application System">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle enw2">UTaipei Student Leave Application System</p>
+                    <p class="protime enw2">Mar 2025 - Present</p>
+                    <div class="protag enw2">
+                        <span>FastAPI</span>
+                        <span>SQLAlchemy</span>
+                        <span>pytest</span>
+                    </div>
+                    <p class="probrief enw2">The system is the outcome of the Administrative Systems Student Collaboration Project, led by the Computer and Network Center of the University of Taipei. Students can submit leave requests and check the approval status and leave records through this system. I joined the maintenance team one and a half years after the system went live, and was mainly responsible for backend development and SRE.</p>
+                </div>
+            </a>
+            <a href="https://github.com/utaipei-sa/reserve.utsa" target="_blank" class="problock utsa">
+                <div class="proimage">
+                    <img src="/pictures/project_use/utsa-reserve.png" alt="UTaipei Student Association Borrowing Management Platform" title="UTaipei Student Association Borrowing Management Platform">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle enw2">UTaipei Student Association Borrowing Management Platform</p>
+                    <p class="protime enw2">Sep 2024 - Present</p>
+                    <div class="protag enw2">
+                        <span>Vue.js</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <p class="probrief enw2">An platform for students in the University of Taipei to reserve and borrow venues in the Student Activity Center and equipment managed by the Student Association. Student Association officers can review and approve reservations via the admin panel. During the 11th term of the Student Association, I was responsible for frontend development, and in the 12th term, I led the overall development project.</p>
+                </div>
+            </a>
             <a href="https://tw-anscheck.pages.dev/" target="_blank" class="problock personal">
                 <div class="proimage">
                     <img src="/pictures/project_use/TW-AnsCheck.png" alt="TW-AnsCheck" title="TW-AnsCheck">
