--- a/projects/index.html
+++ b/projects/index.html
@@ -70,9 +70,55 @@
                 <option value="all" selected>全部</option>
                 <option value="personal">個人專案</option>
                 <option value="infor35th">@ INFOR 35th</option>
+                <option value="utsa">@臺北市立大學學生會資訊部</option>
+                <option value="utsys">@臺北市立大學計算機與網路中心</option>
             </select>
         </div>
         <div id="projectc">
+            <a href="https://carbon-diary.utaipei.edu.tw/" target="_blank" class="problock utsys">
+                <div class="proimage">
+                    <img src="/pictures/project_use/utsys-carbondiary.png" alt="臺北市立大學 Carbon Diary 學生減碳系統" title="臺北市立大學 Carbon Diary 學生減碳系統">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle zhwb">臺北市立大學 Carbon Diary 減碳系統</p>
+                    <p class="protime zhw">Mar 2025 - Jul 2025</p>
+                    <div class="protag zhw">
+                        <span>FastAPI</span>
+                        <span>SQLAlchemy</span>
+                        <span>pytest</span>
+                    </div>
+                    <p class="probrief zhw">學生及教職員若在學生餐廳消費時自備環保餐具，可透過本系統掃描店家 QR code 獲取點數；管理員則可透過系統後台，檢視及匯出減碳紀錄、辦理點數抽獎。我於本系統上線半年後加入維運團隊，主要負責 Backend & SRE。因學校政策無後續的使用規劃，本系統於 2025 年 7 月底停止維護。</p>
+                </div>
+            </a>
+            <a href="https://portal.utaipei.edu.tw/" target="_blank" class="problock utsys">
+                <div class="proimage">
+                    <img src="/pictures/project_use/utsys-portal.png" alt="臺北市立大學學生請假系統" title="臺北市立大學學生請假系統">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle zhwb">臺北市立大學學生請假系統</p>
+                    <p class="protime zhw">Mar 2025 - Present</p>
+                    <div class="protag zhw">
+                        <span>FastAPI</span>
+                        <span>SQLAlchemy</span>
+                        <span>pytest</span>
+                    </div>
+                    <p class="probrief zhw">本系統為北市大計算機與網路中心推動的「校務系統學生協作計畫」成果。學生可透過此系統進行請假，並檢視通過與否及請假紀錄。我於本系統上線一年半後加入維運團隊，主要負責 Backend & SRE。</p>
+                </div>
+            </a>
+            <a href="https://github.com/utaipei-sa/reserve.utsa" target="_blank" class="problock utsa">
+                <div class="proimage">
+                    <img src="/pictures/project_use/utsa-reserve.png" alt="臺北市立大學學生會借用預約平台" title="臺北市立大學學生會借用預約平台">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle zhwb">臺北市立大學學生會借用預約平台</p>
+                    <p class="protime zhw">Sep 2024 - Present</p>
+                    <div class="protag zhw">
+                        <span>Vue.js</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <p class="probrief zhw">學生會場地及設備的借用管理平台，校內學生可於此平台，預約借用由學生會管理之學生活動中心場地及會內開放借用之財務，而學生會幹部則可透過後台進行預約審核。我於學生會第十一屆期間負責本系統的前端開發，於第十二屆期間負責主導本系統的開發專案。</p>
+                </div>
+            </a>
             <a href="https://tw-anscheck.pages.dev/" target="_blank" class="problock personal">
                 <div class="proimage">
                     <img src="/pictures/project_use/TW-AnsCheck.png" alt="臺灣升學考試對答" title="臺灣升學考試對答">
