feat: adjust content and date representation

--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -65,10 +65,10 @@
             </p>
         </div>
         <div id="choose">
-            <select class="zhw" id="choosetype">
+            <select class="enw2" id="choosetype">
                 <option value="all" selected>All</option>
                 <option value="personal">Personal</option>
-                <option value="infor35th">@ INFOR 35th</option>
+                <option value="infor35th">@INFOR 35th</option>
                 <option value="utsa">@IT Division, University of Taipei Student Association</option>
                 <option value="utsys">@Computer and Network Center, University of Taipei</option>
             </select>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="prodetails">
                     <p class="protitle enw2">TW-AnsCheck</p>
-                    <p class="protime enw2">Apr 2024 ~ Present</p>
+                    <p class="protime enw2">Apr 2024 - Present</p>
                     <div class="protag enw2">
                         <span>HTML</span>
                         <span>JavaScript</span>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="prodetails">
                     <p class="protitle enw2">BlueBoy Space</p>
-                    <p class="protime enw2">Feb 2023 ~ Present</p>
+                    <p class="protime enw2">Feb 2023 - Present</p>
                     <div class="protag enw2">
                         <span>HTML</span>
                         <span>CSS</span>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="prodetails">
                     <p class="protitle enw2">INFOR 35th Website</p>
-                    <p class="protime enw2">Feb 2023 ~ Jun 2023</p>
+                    <p class="protime enw2">Feb 2023 - Jun 2023</p>
                     <div class="protag enw2">
                         <span>HTML</span>
                         <span>CSS</span>
