--- a/projects/index.html
+++ b/projects/index.html
@@ -69,7 +69,7 @@
             <select class="zhw" id="choosetype">
                 <option value="all" selected>全部</option>
                 <option value="personal">個人專案</option>
-                <option value="infor35th">@ INFOR 35th</option>
+                <option value="infor35th">@INFOR 35th</option>
                 <option value="utsa">@臺北市立大學學生會資訊部</option>
                 <option value="utsys">@臺北市立大學計算機與網路中心</option>
             </select>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="prodetails">
                     <p class="protitle zhwb">臺灣升學考試對答</p>
-                    <p class="protime zhw">2024/04 ~ Present</p>
+                    <p class="protime zhw">Apr 2024 - Present</p>
                     <div class="protag zhw">
                         <span>HTML</span>
                         <span>JavaScript</span>
@@ -140,14 +140,14 @@
                 </div>
                 <div class="prodetails">
                     <p class="protitle zhwb">BlueBoy Space</p>
-                    <p class="protime zhw">2023/02 ~ Present</p>
+                    <p class="protime zhw">Feb 2023 - Present</p>
                     <div class="protag zhw">
                         <span>HTML</span>
                         <span>CSS</span>
                         <span>JavaScript</span>
                         <span>jQuery</span>
                     </div>
-                    <p class="probrief zhw">我自己開發的個人部落格。為原本高中111-2學期自主學習計畫「動手建個人網站」之成果，計畫結束後仍持續使用及改善維護至今。</p>
+                    <p class="probrief zhw">我自己開發的個人部落格。為原本高中 111-2 學期自主學習計畫「動手建個人網站」之成果，計畫結束後仍持續使用及改善維護至今。</p>
                 </div>
             </a>
             <a href="https://35.infor.org/" target="_blank" class="problock infor35th">
@@ -156,13 +156,13 @@
                 </div>
                 <div class="prodetails">
                     <p class="protitle zhwb">INFOR 35th 官網</p>
-                    <p class="protime zhw">2023/02 ~ 2023/06</p>
+                    <p class="protime zhw">Feb 2023 - Jun 2023</p>
                     <div class="protag zhw">
                         <span>HTML</span>
                         <span>CSS</span>
                         <span>Bootstrap</span>
                     </div>
-                    <p class="probrief zhw">建中資訊社35屆社團官網。本網站為有意了解建國中學資訊社者，提供應屆幹部成員介紹、應屆開設課程內容，以及合作之校外社團等資訊。我負責網站的設計和製作，並使用了HTML、CSS及 Bootstrap 5來製作美觀而簡潔的網站界面。</p>
+                    <p class="probrief zhw">本網站為有意了解建國中學資訊社者，提供應屆幹部成員介紹、應屆開設課程內容，以及合作之校外社團等資訊。我負責網站的設計和製作，並使用了 HTML、CSS 及 Bootstrap 5 製作網站介面。</p>
                 </div>
             </a>
         </div>
